Fix default context menu z-index.

--- a/css/framework7-tweaks.css
+++ b/css/framework7-tweaks.css
@@ -84,6 +84,10 @@ header {
   will-change: none;
 }
 
+.contextMenu {
+  z-index: 10000!important;
+}
+
 body.is_mobile #work_screen {
   grid-template-rows: auto minmax(200px, 5000px) 26px calc(var(--f7-toolbar-height) + var(--f7-safe-area-bottom)) !important;
 }
